--- a/index.html
+++ b/index.html
@@ -1,183 +1,251 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Kite Quiz Tool</title>
-<script src="https://cdn.tailwindcss.com"></script>
-<script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-<style>
-body, html { margin:0; padding:0; height:100%; overflow:hidden; background:black; }
-.floating-ray {
-  position: absolute;
-  width: 200px;
-  height: 200px;
-  background: radial-gradient(circle, rgba(255,255,255,0.15) 0%, transparent 70%);
-  border-radius: 50%;
-  animation: float 6s ease-in-out infinite;
-}
-@keyframes float {
-  0% { transform: translateY(0px) translateX(0px) rotate(0deg);}
-  50% { transform: translateY(-50px) translateX(50px) rotate(180deg);}
-  100% { transform: translateY(0px) translateX(0px) rotate(360deg);}
-}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Kite Quiz Tool</title>
+  <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body>
-<div id="root"></div>
 
-<script type="text/babel">
-const { useState, useEffect, useRef } = React;
-const LOGO_URL = "https://pbs.twimg.com/profile_images/1962781271978815488/07fQQARS_400x400.jpg";
+<body class="bg-black text-white overflow-hidden">
+  <div id="root"></div>
 
-const QUESTIONS = [
-  {id:'q1',question:'What is Kite described as on the gokite.ai homepage?',choices:['A social network for artists','The First AI Payment Blockchain','A cloud storage platform','A search engine for scholarly articles'],answerIndex:1},
-  {id:'q2',question:'Which economy is Kite purpose-built for?',choices:['Gig economy','Autonomous economy','Sharing economy','Circular economy'],answerIndex:1},
-  {id:'q3',question:'Which of the following is NOT listed as a feature on the site?',choices:['Cryptographic identity','Programmable governance','Agentic payments','Built-in social media feed'],answerIndex:3},
-  {id:'q4',question:'What consensus or special term does the site mention as powering Kite?',choices:['Proof of Stake (PoS)','Proof of Work (PoW)','Proof of Artificial Intelligence (PoAI)','Delegated Proof of Stake (DPoS)'],answerIndex:2},
-  {id:'q5',question:'What is the advertised average block time on the Kite site?',choices:['1s','10s','30s','0.1s'],answerIndex:0},
-  {id:'q6',question:'Which testnet is linked from the homepage?',choices:['Ozone Testnet','Kite Testnet','Zephyr Testnet','Nimbus Testnet'],answerIndex:0},
-  {id:'q7',question:'What kind of fees does the site claim the chain has?',choices:['High gas fees','Near zero gas fees','Fixed monthly fees','No fees but subscription'],answerIndex:1},
-  {id:'q8',question:'Which capability allows agents to transact natively on the Kite platform?',choices:['Agentic Payment','Manual invoicing','Third-party gateways','Off-chain escrow'],answerIndex:0},
-  {id:'q9',question:'The site refers to a store where agents can be discovered and listed. What is it called?',choices:['Agent Bazaar','Agent Market','Agent Store','Agent Library'],answerIndex:2},
-  {id:'q10',question:'Which of these is highlighted as an identity feature for AI models and agents?',choices:['Cryptographic identity for actors and assets','Centralized profiles managed by Kite','Public user handles only','Anonymous identities only'],answerIndex:0}
-];
+  <script type="text/babel">
 
-function shuffle(a){return a.sort(()=>Math.random()-0.5);}
+  const LOGO_URL = "https://pbs.twimg.com/profile_images/1962781271978815488/07fQQARS_400x400.jpg";
 
-function Background(){
-  return (
-    <>
-      <img src={LOGO_URL} className="absolute inset-0 w-full h-full object-cover filter blur-xl opacity-40 animate-pulse" />
-      {[...Array(6)].map((_,i)=>(<div key={i} className="floating-ray" style={{
-        top: Math.random()*80 + 'vh',
-        left: Math.random()*80 + 'vw',
-        animationDuration: (4+Math.random()*4)+'s',
-        opacity: 0.15 + Math.random()*0.25
-      }} />))}
-    </>
-  );
-}
-
-function App(){
-  const [mode,setMode]=useState("home");
-  const [deck,setDeck]=useState([]);
-  const [i,setI]=useState(0);
-  const [sel,setSel]=useState(null);
-  const [score,setScore]=useState(0);
-  const [fin,setFin]=useState(false);
-  const [timer,setTimer]=useState(30);
-  const ref=useRef();
-  const results=JSON.parse(localStorage.getItem("kite_quiz_results")||"[]");
-
-  function startQuiz(){
-    const d=shuffle([...QUESTIONS]);
-    setDeck(d);
-    setI(0);setSel(null);setScore(0);setFin(false);
-    setMode("quiz");setTimer(30);
-  }
-
-  useEffect(()=>{
-    if(mode==="quiz"&&!fin){
-      const id=setInterval(()=>setTimer(t=>t>0?t-1:0),1000);
-      ref.current=id;
-      return ()=>clearInterval(id);
+  const questions = [
+    {
+      q: "What is the main goal of GoKite AI?",
+      options: [
+        "AI-powered workflow automation",
+        "Creating social media tools",
+        "Gaming app development",
+        "Blockchain trading"
+      ],
+      correct: 0
+    },
+    {
+      q: "Which technology powers GoKite’s automation features?",
+      options: ["Neural links", "LLMs and APIs", "Smart bots", "Static AI"],
+      correct: 1
+    },
+    {
+      q: "GoKite helps teams automate what?",
+      options: [
+        "Emails only",
+        "Entire business workflows",
+        "Video editing",
+        "Game design"
+      ],
+      correct: 1
+    },
+    {
+      q: "Which sector can benefit from GoKite AI?",
+      options: ["Marketing", "Finance", "HR", "All of the above"],
+      correct: 3
+    },
+    {
+      q: "GoKite integrates with which type of tools?",
+      options: ["Only Google apps", "No external tools", "Third-party business tools", "Only chat apps"],
+      correct: 2
+    },
+    {
+      q: "GoKite focuses on increasing what for teams?",
+      options: ["Entertainment", "Efficiency and speed", "Gaming skills", "Vacation time"],
+      correct: 1
+    },
+    {
+      q: "Which of these best describes GoKite’s interface?",
+      options: ["Code-heavy", "User-friendly", "Outdated", "Hard to use"],
+      correct: 1
+    },
+    {
+      q: "Can GoKite automate repetitive tasks?",
+      options: ["No", "Only a few", "Yes, many", "Only with plugins"],
+      correct: 2
+    },
+    {
+      q: "What is GoKite’s official website?",
+      options: ["gokite.app", "kiteai.io", "gokite.ai", "kite.com"],
+      correct: 2
+    },
+    {
+      q: "Who can use GoKite easily?",
+      options: ["Only developers", "Everyone", "Only AI experts", "Only designers"],
+      correct: 1
     }
-  },[mode,i]);
+  ];
 
-  function ans(idx){
-    const correct=QUESTIONS.find(q=>q.id===deck[i].id).choices[deck[i].answerIndex];
-    const is=deck[i].choices[idx]===correct;
-    if(is) setScore(s=>s+1);
-    setSel(idx);
-    setTimeout(()=>{
-      if(i+1>=deck.length){
-        setFin(true);
-        setMode("finish");
-        const newRes=[{date:new Date().toISOString(),score:score+(is?1:0),total:deck.length},...results];
-        localStorage.setItem("kite_quiz_results",JSON.stringify(newRes.slice(0,20)));
-      } else {setI(x=>x+1);setSel(null);setTimer(30);}
-    },700);
-  }
-
-  function copyLink(){
-    navigator.clipboard.writeText(window.location.href);
-    alert("Quiz link copied!");
-  }
-
-  if(mode==="home") return (
-    <div className="relative h-screen flex flex-col justify-center items-center text-white text-center">
-      <Background/>
-      <div className="relative z-10">
-        <h1 className="text-5xl font-bold mb-6 animate-bounce">Kite Quiz Tool</h1>
-        <button className="px-6 py-3 bg-green-600 rounded-lg m-2 hover:bg-green-500" onClick={startQuiz}>Start Quiz</button>
-        <button className="px-6 py-3 bg-blue-600 rounded-lg m-2 hover:bg-blue-500" onClick={()=>setMode("leader")}>Leaderboard</button>
-      </div>
-      <div className="fixed bottom-2 left-3 text-xs text-white opacity-70 z-50">made by <span className="font-semibold">@abxyj90</span></div>
-    </div>
-  );
-
-  if(mode==="leader") return (
-    <div className="relative h-screen flex flex-col justify-center items-center text-white text-center">
-      <Background/>
-      <div className="relative z-10 max-w-md">
-        <h2 className="text-3xl font-bold mb-4">Leaderboard</h2>
-        <ul className="bg-black bg-opacity-50 p-4 rounded-lg">
-          {results.length?results.map((r,i)=><li key={i}>{i+1}. {new Date(r.date).toLocaleDateString()} - {r.score}/{r.total}</li>):<p>No scores yet</p>}
-        </ul>
-        <button className="mt-4 px-5 py-2 bg-red-600 rounded hover:bg-red-500" onClick={()=>setMode("home")}>Back</button>
-      </div>
-      <div className="fixed bottom-2 left-3 text-xs text-white opacity-70 z-50">made by <span className="font-semibold">@abxyj90</span></div>
-    </div>
-  );
-
-  if(mode==="finish"){
-    const quizLink=window.location.href;
-    const shareText=`I scored ${score}/${deck.length} on Kite Quiz! Try it yourself 👇`;
-    const shareUrl=`https://twitter.com/intent/tweet?text=${encodeURIComponent(shareText)}&url=${encodeURIComponent(quizLink)}`;
-
+  function Background() {
     return (
-      <div className="relative h-screen flex flex-col justify-center items-center text-white text-center">
-        <Background/>
-        <div className="relative z-10">
-          <h2 className="text-4xl font-bold mb-4">🎉 Congratulations! 🎉</h2>
-          <p className="text-2xl mb-4">Your Score: {score}/{deck.length}</p>
-          <div className="space-x-3">
-            <button className="px-5 py-2 bg-blue-600 rounded hover:bg-blue-500" onClick={()=>window.open(shareUrl,'_blank')}>Share on X</button>
-            <button className="px-5 py-2 bg-yellow-500 rounded hover:bg-yellow-400" onClick={copyLink}>Copy Link</button>
-            <button className="px-5 py-2 bg-green-600 rounded hover:bg-green-500" onClick={()=>setMode('home')}>Back Home</button>
-          </div>
-        </div>
-        <div className="fixed bottom-2 left-3 text-xs text-white opacity-70 z-50">made by <span className="font-semibold">@abxyj90</span></div>
-      </div>
+      <div
+        className="absolute inset-0 bg-cover bg-center blur-lg brightness-50 animate-pulse"
+        style={{
+          backgroundImage: `url(${LOGO_URL})`,
+          zIndex: 0
+        }}
+      ></div>
     );
   }
 
-  const q=deck[i];
-  return (
-    <div className="relative h-screen flex flex-col justify-center items-center text-white text-center">
-      <Background/>
-      <div className="relative z-10 max-w-xl">
-        <h2 className="text-2xl font-bold mb-4">{q.question}</h2>
-        <p className="mb-2">⏳ {timer}s left</p>
-        <div className="space-y-2">
-          {q.choices.map((c,idx)=>(
-            <button key={idx} disabled={sel!==null}
-              onClick={()=>ans(idx)}
-              className={`block w-full py-2 rounded ${sel===idx?(QUESTIONS.find(x=>x.id===q.id).choices[QUESTIONS.find(x=>x.id===q.id).answerIndex]===c?'bg-green-600':'bg-red-600'):'bg-gray-700 hover:bg-gray-600'}`}>
-              {c}
-            </button>
-          ))}
-        </div>
-      </div>
-      <div className="fixed bottom-2 left-3 text-xs text-white opacity-70 z-50">made by <span className="font-semibold">@abxyj90</span></div>
-    </div>
-  );
-}
+  function KiteQuizTool() {
+    const [mode, setMode] = React.useState("home");
+    const [index, setIndex] = React.useState(0);
+    const [score, setScore] = React.useState(0);
+    const [answers, setAnswers] = React.useState([]);
 
-ReactDOM.createRoot(document.getElementById("root")).render(<App/>);
-</script>
+    const startQuiz = () => {
+      setMode("quiz");
+      setIndex(0);
+      setScore(0);
+      setAnswers([]);
+    };
+
+    const handleAnswer = (i) => {
+      const correct = i === questions[index].correct;
+      if (correct) setScore(score + 1);
+      setAnswers([...answers, i]);
+      if (index + 1 < questions.length) setIndex(index + 1);
+      else setMode("result");
+    };
+
+    const shareOnX = () => {
+      const shareUrl = encodeURIComponent(window.location.href);
+      const text = encodeURIComponent(
+        `🎯 I scored ${score}/${questions.length} on the Kite Quiz! 🚀\nTry it yourself here:`
+      );
+      window.open(`https://twitter.com/intent/tweet?text=${text}&url=${shareUrl}`, "_blank");
+    };
+
+    if (mode === "home")
+      return (
+        <div className="relative h-screen flex flex-col justify-center items-center text-center overflow-hidden">
+          <Background />
+          {/* Glowing Logo */}
+          <div className="absolute inset-0 flex justify-center items-center">
+            <div className="relative">
+              <div className="absolute inset-0 rounded-full blur-2xl bg-cyan-400 opacity-40 animate-ping"></div>
+              <img
+                src={LOGO_URL}
+                className="w-44 h-44 rounded-full border-4 border-white shadow-2xl animate-pulse opacity-95 relative z-10"
+                alt="Kite Logo"
+              />
+            </div>
+          </div>
+
+          <div className="relative z-10 mt-72 space-y-4">
+            <h1 className="text-5xl font-bold drop-shadow-lg animate-bounce">Kite Quiz Tool</h1>
+            <div className="space-x-4">
+              <button
+                className="px-6 py-3 bg-green-600 rounded-lg hover:bg-green-500 transition transform hover:scale-105"
+                onClick={startQuiz}
+              >
+                Start Quiz
+              </button>
+              <button
+                className="px-6 py-3 bg-blue-600 rounded-lg hover:bg-blue-500 transition transform hover:scale-105"
+                onClick={() => setMode("leader")}
+              >
+                Leaderboard
+              </button>
+            </div>
+          </div>
+
+          {/* Footer credit */}
+          <div className="fixed bottom-2 left-3 text-xs text-white opacity-70 z-50">
+            made by <span className="font-semibold">@abxyj90</span>
+          </div>
+        </div>
+      );
+
+    if (mode === "quiz") {
+      const q = questions[index];
+      return (
+        <div className="relative h-screen flex flex-col justify-center items-center p-4 text-center overflow-hidden">
+          <Background />
+          <div className="z-10 bg-black bg-opacity-50 p-8 rounded-2xl shadow-2xl w-full max-w-2xl">
+            <h2 className="text-2xl font-bold mb-6">{q.q}</h2>
+            <div className="space-y-3">
+              {q.options.map((opt, i) => (
+                <button
+                  key={i}
+                  onClick={() => handleAnswer(i)}
+                  className="w-full px-4 py-3 bg-gray-700 rounded-lg hover:bg-green-600 transition"
+                >
+                  {opt}
+                </button>
+              ))}
+            </div>
+            <p className="mt-6 text-sm opacity-80">
+              Question {index + 1} / {questions.length}
+            </p>
+          </div>
+
+          {/* Footer credit */}
+          <div className="fixed bottom-2 left-3 text-xs text-white opacity-70 z-50">
+            made by <span className="font-semibold">@abxyj90</span>
+          </div>
+        </div>
+      );
+    }
+
+    if (mode === "result")
+      return (
+        <div className="relative h-screen flex flex-col justify-center items-center text-center overflow-hidden">
+          <Background />
+          <div className="z-10 bg-black bg-opacity-60 p-10 rounded-2xl shadow-2xl">
+            <h1 className="text-4xl font-bold mb-4">🎉 Congratulations!</h1>
+            <p className="text-xl mb-6">You scored {score} / {questions.length}</p>
+            <button
+              onClick={shareOnX}
+              className="px-6 py-3 bg-blue-500 rounded-lg hover:bg-blue-400 transition"
+            >
+              Share on X
+            </button>
+            <button
+              onClick={() => setMode("home")}
+              className="ml-4 px-6 py-3 bg-green-600 rounded-lg hover:bg-green-500 transition"
+            >
+              Play Again
+            </button>
+          </div>
+
+          {/* Footer credit */}
+          <div className="fixed bottom-2 left-3 text-xs text-white opacity-70 z-50">
+            made by <span className="font-semibold">@abxyj90</span>
+          </div>
+        </div>
+      );
+
+    if (mode === "leader")
+      return (
+        <div className="relative h-screen flex flex-col justify-center items-center text-center overflow-hidden">
+          <Background />
+          <div className="z-10 bg-black bg-opacity-60 p-8 rounded-2xl shadow-xl">
+            <h2 className="text-3xl font-bold mb-4">🏆 Leaderboard</h2>
+            <p className="text-gray-300 mb-6">Coming soon...</p>
+            <button
+              onClick={() => setMode("home")}
+              className="px-6 py-3 bg-green-600 rounded-lg hover:bg-green-500 transition"
+            >
+              Back to Home
+            </button>
+          </div>
+
+          {/* Footer credit */}
+          <div className="fixed bottom-2 left-3 text-xs text-white opacity-70 z-50">
+            made by <span className="font-semibold">@abxyj90</span>
+          </div>
+        </div>
+      );
+  }
+
+  ReactDOM.render(<KiteQuizTool />, document.getElementById("root"));
+
+  </script>
 </body>
 </html>
