--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ function App(){
     <div className="relative h-screen flex flex-col justify-center items-center text-white text-center">
       <Background/>
       <div className="relative z-10">
-        <h1 className="text-5xl font-bold mb-6 animate-bounce">Kite Quiz Tool</h1>
+        <h1 className="text-5xl font-bold mb-6 animate-bounce">Kite Quiz</h1>
         <button className="px-6 py-3 bg-green-600 rounded-lg m-2 hover:bg-green-500" onClick={startQuiz}>Start Quiz</button>
         <button className="px-6 py-3 bg-blue-600 rounded-lg m-2 hover:bg-blue-500" onClick={()=>setMode("leader")}>Leaderboard</button>
       </div>
