--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Kite Quiz</title>
+<title>Kite AI Quiz</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
@@ -111,7 +111,7 @@ function App(){
     <div className="relative h-screen flex flex-col justify-center items-center text-white text-center">
       <Background/>
       <div className="relative z-10">
-        <h1 className="text-5xl font-bold mb-6 animate-bounce">Kite Quiz</h1>
+        <h1 className="text-5xl font-bold mb-6 animate-bounce">Kite AI Quiz</h1>
         <button className="px-6 py-3 bg-green-600 rounded-lg m-2 hover:bg-green-500" onClick={startQuiz}>Start Quiz</button>
         <button className="px-6 py-3 bg-blue-600 rounded-lg m-2 hover:bg-blue-500" onClick={()=>setMode("leader")}>Leaderboard</button>
       </div>
